# codex_test

./: .gitignore  CMakeLists.txt  README.md
docs/tegrastats-tui-preview/: README.md  tui_actual_preview.ansi  tui_actual_preview.txt
include/tlscope/: aggregate.hpp  csv_writer.hpp  proc_reader.hpp  sample_engine.hpp  target_resolver.hpp  types.hpp
scripts/: build-windows-qt.ps1  build-windows-smoke.ps1  install-windows-qt.ps1
src/: aggregate.cpp  csv_writer.cpp  main.cpp  proc_reader.cpp  sample_engine.cpp  target_resolver.cpp
src/qt/: qt_main.cpp
tests/fixtures/: periodic_load.cpp
tools/: render_tegrastats_tui_preview.py
